--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
   "deno.enable": true,
-  "deno.unstable": true
+  "deno.unstable": true,
+  "cSpell.words": [
+    "codegen",
+    "metafield",
+    "metafields",
+    "myshopify",
+    "requestable"
+  ]
 }
